# btc-tc-artifact

./: .gitignore  CITATION.cff  CLAIMS.md  CMakeLists.txt  LICENSE  README.md  requirements.txt
apps/: CMakeLists.txt  btc_blocksize_bench.cu  btc_tc_adaptive_16x128.cu  btc_tc_adaptive_16x32.cu  btc_tc_lite.cu  btc_tc_v3.cu  btc_tc_v3_16x32.cu  btc_tc_v5_16x128.cu  btc_tc_v6_16x32.cu  hybrid_ablation.cu  mtx_to_tc_compare.cu  tau_sweep.cu
baselines/: CMakeLists.txt  README.md  tc_compare_manifest.json
baselines/LAGraph/experimental/benchmark/: tcc_demo.c
baselines/LAGraph/src/benchmark/: LAGraph_demo.h  tc_demo.c
baselines/SuiteSparse-GraphBLAS-cuda/: CMakeLists.txt
baselines/SuiteSparse-GraphBLAS-cuda/CUDA/: CMakeLists.txt  GB_cuda_AxB_dot3.cpp  GB_cuda_matrix_prefetch.cpp  GB_cuda_select_sparse.cpp
baselines/SuiteSparse-GraphBLAS-cuda/CUDA/template/: GB_jit_kernel_cuda_AxB_dot3.cu
baselines/SuiteSparse-GraphBLAS-cuda/Include/: GraphBLAS.h
baselines/SuiteSparse-GraphBLAS-cuda/install-cuda/lib/cmake/GraphBLAS/: GraphBLASConfig.cmake  GraphBLASConfigVersion.cmake  GraphBLASTargets-release.cmake  GraphBLASTargets.cmake  GraphBLAS_CUDAConfig.cmake  GraphBLAS_CUDATargets-release.cmake  GraphBLAS_CUDATargets.cmake
baselines/SuiteSparse-GraphBLAS-cuda/install-cuda/lib/pkgconfig/: GraphBLAS.pc  GraphBLAS_CUDA.pc
baselines/SuiteSparse-GraphBLAS-cuda/rmm_wrap/: CMakeLists.txt  rmm_wrap.cpp  rmm_wrap.hpp
baselines/TC-Compare/: .gitignore  CMakeLists.txt  README.md
baselines/TC-Compare/approach/Bisson/: Makefile  bisson  preTC.cu  tc.cu
baselines/TC-Compare/approach/Fox/: Makefile  fox  preTC.cu  tc.cu
baselines/TC-Compare/approach/Green/: Makefile  green
baselines/TC-Compare/approach/Green/include/: cpurun.hpp  gpurun.cuh  graphRead.hpp  main.cuh  param.cuh
baselines/TC-Compare/approach/Green/src/: clusteringCount.cu  gpurun.cu  graphRead.cpp  main.cu  param.cu
baselines/TC-Compare/approach/GroupTC/: Makefile  grouptc  tc.cu
baselines/TC-Compare/approach/H-INDEX/: Makefile  README.md  TC.cu  graph.h  graph.hpp  hindex  wtime.h
baselines/TC-Compare/approach/Hu/: Makefile  hu  preTC.cu  tc.cu
baselines/TC-Compare/approach/TRUST/: Makefile  tc.cu  trust
baselines/TC-Compare/approach/comm/: comm.h  cuda_comm.h  gpu_graph.cuh  graph.h  graph.hpp  herror.h
baselines/TC-Compare/approach/polak/: Makefile  convert-from-dimacs-main.e  convert-from-snap-main.cpp  convert-from-snap-main.e  convert-to-latapy-main.e  create-barabasi-albert-main.e  create-watts-strogatz-main.e  gpu-thrust.cu  gpu.cu  gpu.h  graph.cpp  latapy.e  main.cpp  polak  timer.cpp
baselines/TC-Compare/approach/tricore/: Makefile  tricore
baselines/TC-Compare/approach/tricore/include/: tricount.h
baselines/TC-Compare/approach/tricore/src/: main.cpp  tricount_gpu.cu
baselines/TC-Compare/data_getter/g500/: run.sh  seq-csr
baselines/TC-Compare/data_getter/g500/graph500-2.1.4/: graph500.c  run.sh
baselines/TC-Compare/data_getter/g500/graph500-2.1.4/data/: run.sh
baselines/TC-Compare/data_getter/snap/: WgetSNAPData.sh
baselines/TC-Compare/preprocessing/: CMakeLists.txt
baselines/TC-Compare/preprocessing/cpu_preprocessing/: CMakeLists.txt
baselines/TC-Compare/preprocessing/cpu_preprocessing/CSR2XXX/: CSR2DCSR  CSR2DCSR.cpp  CSR2HuEdgeList  CSR2HuEdgeList.cpp  CSR2PolakEdgeList  CSR2PolakEdgeList.cpp  CSR2RidDCSR  CSR2RidDCSR.cpp  CSR2TrustCSR.cpp  CSR2TrustSortCSR.cpp  batchCommand.sh
baselines/TC-Compare/preprocessing/cpu_preprocessing/XXX2CSR/: Dimacs2CSR.cpp  G5002CSR.cpp  GraphChallenge2CSR.cpp  MTX2CSR  MTX2CSR.cpp  SNAP2CSR.cpp  batchCommand.sh
baselines/TC-Compare/preprocessing/cpu_preprocessing/common/: comm.h
baselines/TC-Compare/preprocessing/gpu_preprocessing/: CSR2DCSR.cu  CSR2RidDCSR.cu  CSR2TrustNSortDCSR.cu  batchCommand.sh
baselines/TC-Compare/preprocessing/gpu_preprocessing/common/: comm.h
baselines/TRUST/Preprocess/: fromDirectToUndirect  partition  preprocess
baselines/TRUST/With-graph-partition/: Makefile
baselines/TRUST/Without-graph-partition/: Makefile
baselines/ToT-TPDS25/: CMakeLists.txt  README.md
baselines/ToT-TPDS25/apps/: tot.cu
baselines/ToT-TPDS25/tot/operations/: convert.h  triangle_count.h
baselines/ToT-TPDS25/tot/utils/io/: read.h
baselines/cublas_tc/: CMakeLists.txt  cublas_A3_tc.cu  cublas_tc.cu
baselines/cusparse_tc/: CMakeLists.txt  cusparse_A3_tc.cu  cusparse_tc_lxlt.cu
btc/: btc.h  meta_adaptive_results.md
btc/common/: arithmetic.h  constants.h  macros.h  memory.h  types.h
btc/formats/: bitcoo.h  coo.h  csr.h
btc/operations/: VERSION_COMPARISON.md  analyze_blocks.h  bcsr_16x128.h  bcsr_16x32.h  blocksize_bench_bcsr.h  blocksize_bench_kernels.h  btc_core.h  convert.h  reorder.h  reorder_gorder.cpp  reorder_gorder.h  reorder_hashorder.cpp  reorder_hashorder.h  reorder_rabbit.cpp  reorder_rabbit.h  reorder_rcm.cpp  reorder_rcm.h  tc_16x128_ablation_RS.h  tc_16x128_ablation_SR.h  tc_16x128_adaptive.h  tc_16x128_mma_v1.h  tc_16x128_mma_v2.h  tc_16x128_mma_v3.h  tc_16x128_mma_v4.h  tc_16x128_mma_v5.h  tc_16x128_mma_v5_mergeonce.h  tc_16x128_mma_v5_shfl.h  tc_16x128_mma_v5_smem.h  tc_16x32_ablation_RS.h  tc_16x32_ablation_SR.h  tc_16x32_adaptive.h  tc_16x32_mma_v3.h  tc_16x32_mma_v4.h  tc_16x32_mma_v5.h  tc_16x32_mma_v6.h  tc_16x32_mma_v6_shfl.h  triangle_count_cpu.h
btc/utils/: csr_helpers.h  functors.h  option.h  timer.h
btc/utils/io/: read.h
data/: paper_datasets.txt
results/blocksize_bench/: blocksize_bench_paper37.csv  summary.txt
results/e2e_breakdown/: breakdown.csv
results/ncu/: pro6000_btc128_F1.raw.csv  pro6000_btc128_Ga41As41H72.raw.csv  pro6000_btc128_Si41Ge41H72_20260401_110117.raw.csv  pro6000_btc128_cant.raw.csv  (+28 more)
scripts/: bench_baselines.py  build_all.sh  download_datasets.sh  ncu_profile_metrics.sh  regenerate_all_figures.sh  reproduce_paper.sh  run_ablation.sh  run_all.sh  run_all_baselines.sh  run_blocksize_bench_paper37.sh  run_e2e_breakdown.sh  run_hybrid_ablation.sh  run_ncu_profile.sh  run_reorder_compare.sh  run_tau_sweep.sh  smoke_test.sh  summarize_blocksize_bench_paper37.py
(+58 files in other folders)
